# lazybones

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  SCOPE.md  lazybones.yaml  workfile.yaml
crates/lazybones-api/: Cargo.toml
crates/lazybones-api/src/: cors.rs  dto.rs  error.rs  extract.rs  lib.rs  state.rs
crates/lazybones-api/src/engine/: catalog.rs  detect.rs  mod.rs  report.rs
crates/lazybones-api/src/routes/: activity.rs  agent_catalog.rs  agent_chat.rs  agent_test.rs  agents.rs  assets.rs  block.rs  branding.rs  cancel.rs  chat.rs  claim.rs  content_sync.rs  create.rs  delete.rs  document_gh.rs  document_pages.rs  document_render.rs  document_sources.rs  documents.rs  done.rs  engine.rs  extensions.rs  files.rs  follow_ups.rs  fs_list.rs  gate.rs  get.rs  gh.rs  guard.rs  hcom_log.rs  health.rs  heartbeat.rs  issue.rs  jobs.rs  list.rs  management_agent.rs  mcp_token.rs  members.rs  mod.rs  preferences.rs  (+39 more)
crates/lazybones-api/tests/: api_test.rs  documents_test.rs  extensions_test.rs  management_agent_test.rs  mcp_token_test.rs  projects_test.rs  skills_test.rs  workflows_test.rs
crates/lazybones-cli/: Cargo.toml
crates/lazybones-cli/src/: configure.rs  main.rs  serve.rs  workfile.rs
crates/lazybones-engine/: Cargo.toml
crates/lazybones-engine/src/: config.rs  lib.rs
crates/lazybones-engine/src/hcom/: control.rs  events.rs  mod.rs  spawn.rs  trust.rs
crates/lazybones-engine/src/management/: cheatsheet.rs  confirm.rs  context.rs  mod.rs  prompt.rs  runner.rs
crates/lazybones-engine/src/scheduler/: auto_pr.rs  block.rs  effective.rs  ext.rs  finish.rs  follow_up.rs  gate.rs  gate_preflight.rs  git.rs  hcom_tail.rs  issue.rs  merge.rs  mod.rs  preflight.rs  prompt.rs  reclaim.rs  run.rs  tick.rs  worktree.rs
crates/lazybones-engine/src/sync/: actions.rs  auto.rs  error.rs  job.rs  mod.rs  remote.rs  resolve.rs  status.rs
crates/lazybones-engine/tests/: auto_retry_test.rs  hcom_tail_test.rs  tick_walk_test.rs
crates/lazybones-ext/: Cargo.toml
crates/lazybones-ext/fixtures/: README.md  build.sh
crates/lazybones-ext/fixtures/wasm/: gate-check-example.wasm
crates/lazybones-ext/src/: breaker.rs  capability.rs  caps.rs  cycle.rs  dispatch.rs  engine.rs  fault.rs  gate.rs  http.rs  lib.rs  manifest.rs  reaction.rs  registry.rs  views.rs  weather.rs
crates/lazybones-ext/tests/: gate_check.rs  registry.rs  weather.rs
crates/lazybones-ext/wit/: world.wit
crates/lazybones-gh/: Cargo.toml
crates/lazybones-gh/src/: error.rs  issue.rs  lib.rs  pr.rs  repo.rs  sync.rs
crates/lazybones-jobs/: Cargo.toml
crates/lazybones-jobs/src/: error.rs  job.rs  lib.rs  registry.rs  runner.rs
crates/lazybones-mcp/: Cargo.toml
crates/lazybones-mcp/src/: args.rs  auth.rs  error.rs  lib.rs  server.rs
crates/lazybones-mcp/src/tools/: documents.rs  extensions.rs  mod.rs  orchestrate.rs  supervise.rs
crates/lazybones-mcp/tests/: capability_test.rs  documents_test.rs  extensions_test.rs  orchestrate_test.rs
crates/lazybones-render/: Cargo.toml
crates/lazybones-render/src/: convert.rs  html.rs  lib.rs  model.rs  pdf.rs  spike.rs
crates/lazybones-store/: Cargo.toml
crates/lazybones-store/src/: bootstrap.rs  check_health.rs  connect.rs  error.rs  handle.rs  init_schema.rs  lib.rs
crates/lazybones-store/src/agent/: agents.default.yaml  create.rs  delete.rs  get.rs  list.rs  mod.rs  model.rs  row.rs  seed.rs  update.rs
crates/lazybones-store/src/agent_chat/: mod.rs  model.rs  row.rs  store.rs
crates/lazybones-store/src/asset/: blob.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  model.rs  row.rs
crates/lazybones-store/src/attachment/: mod.rs  row.rs  verbs.rs
crates/lazybones-store/src/branding/: create.rs  delete.rs  get.rs  list.rs  mod.rs  model.rs  row.rs  seed.rs  update.rs
crates/lazybones-store/src/chat/: append.rs  history.rs  mod.rs  model.rs  row.rs
crates/lazybones-store/src/document/: create.rs  delete.rs  get.rs  list.rs  mod.rs  model.rs  row.rs  update.rs
crates/lazybones-store/src/event/: activity.rs  append.rs  bus.rs  history.rs  mod.rs  row.rs
crates/lazybones-store/src/extension/: create.rs  delete.rs  get.rs  list.rs  mod.rs  model.rs  row.rs  update.rs
crates/lazybones-store/src/follow_up/: append.rs  history.rs  mod.rs  row.rs
crates/lazybones-store/src/hcom_log/: append.rs  history.rs  mod.rs  row.rs
crates/lazybones-store/src/management_agent/: get.rs  mod.rs  model.rs  put.rs  row.rs
crates/lazybones-store/src/org/: create.rs  get.rs  list.rs  mod.rs  model.rs  row.rs
crates/lazybones-store/src/page/: create.rs  delete.rs  get.rs  list.rs  mod.rs  model.rs  row.rs  update.rs
crates/lazybones-store/src/preferences/: get.rs  mod.rs  model.rs  put.rs  row.rs
crates/lazybones-store/src/project/: create.rs  delete.rs  get.rs  list.rs  mod.rs  model.rs  row.rs  under.rs  update.rs
crates/lazybones-store/src/run/: cancel.rs  create.rs  cursor.rs  delete.rs  derived.rs  get.rs  list.rs  mod.rs  model.rs  resume.rs  row.rs  start.rs  stop.rs  update.rs
crates/lazybones-store/src/secret/: cipher.rs  delete.rs  env.rs  list.rs  mod.rs  model.rs  put.rs  row.rs
crates/lazybones-store/src/skill/: create.rs  delete.rs  get.rs  list.rs  mod.rs  model.rs  row.rs  seed.rs  skills.default.yaml  update.rs
crates/lazybones-store/src/source/: create.rs  delete.rs  extract.rs  get.rs  list.rs  mod.rs  model.rs  row.rs  update.rs
crates/lazybones-store/src/sync/: export.rs  import.rs  mod.rs
crates/lazybones-store/src/task/: create.rs  delete.rs  depend.rs  get.rs  heartbeat.rs  issue.rs  list.rs  mod.rs  model.rs  reset.rs  retry.rs  row.rs  status.rs  transition.rs  update.rs  upsert.rs
crates/lazybones-store/src/team/: create.rs  get.rs  list.rs  member.rs  mod.rs  model.rs  row.rs  under.rs
crates/lazybones-store/tests/: lifecycle_test.rs
examples/gate-verdict-tab/backend/: Cargo.toml  build.sh  embed-manifest.py
examples/weather/backend/: Cargo.toml  build.sh
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
(+306 files in other folders)
