# lazybones — standalone multi-agent build orchestrator (will move to its own repo).
# Its own cargo workspace; deliberately NOT a member of the parent rubix workspace.
[workspace]
resolver = "2"
members = [
    "crates/lazybones-store",
    "crates/lazybones-auth",
    "crates/lazybones-api",
    "crates/lazybones-engine",
    "crates/lazybones-gh",
    "crates/lazybones-cli",
    "crates/lazybones-render",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93"

[workspace.dependencies]
lazybones-store = { version = "0.1.0", path = "crates/lazybones-store" }
lazybones-auth = { version = "0.1.0", path = "crates/lazybones-auth" }
lazybones-api = { version = "0.1.0", path = "crates/lazybones-api" }
lazybones-engine = { version = "0.1.0", path = "crates/lazybones-engine" }
lazybones-gh = { version = "0.1.0", path = "crates/lazybones-gh" }
lazybones-render = { version = "0.1.0", path = "crates/lazybones-render" }

# Typst PDF rendering (pure Rust, no external binary). Pinned to EXACT versions:
# Phase 3a is a de-risk spike — the Typst API churns between releases, so the
# whole workspace tracks one proven version set. typst-assets supplies embedded
# fonts for the offline `World` impl; comemo backs Typst's incremental cache.
typst = "=0.15.0"
typst-pdf = "=0.15.0"
typst-assets = { version = "=0.15.0", features = ["fonts"] }
# `PagedDocument` (the paged layout output `typst::compile` produces and
# `typst_pdf::pdf` consumes) lives in this crate and is NOT re-exported by
# `typst`, so it is a direct dependency. Same exact pin as the rest of the set.
typst-layout = "=0.15.0"
comemo = "=0.5.1"

anyhow = "1"
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "query"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Secret store at rest: AES-256-GCM authenticated encryption, SHA-256 to derive
# the cipher key from a master passphrase, base64 for the stored blob.
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
# Object-safe async trait methods (the `BlobStore` trait behind `dyn`).
async-trait = "0.1"
# Plain-text extraction from uploaded PDF sources (powers preview/keyword search
# and the later RAG chunking substrate).
pdf-extract = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
surrealdb = { version = "3", default-features = false, features = ["kv-mem", "kv-surrealkv"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal", "process"] }
# Adapt the store's `broadcast::Receiver` into a `Stream` for axum SSE (`/stream`).
tokio-stream = { version = "0.1", features = ["sync"] }
# CORS so the browser/desktop UI (a different origin) can read the REST surface.
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"
