[package]
name = "lazybones-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
lazybones-store = { workspace = true }
lazybones-auth = { workspace = true }
lazybones-engine = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true }
# SSE `/stream`: adapt the store's broadcast receiver into an axum event stream.
tokio-stream = { workspace = true }
# `spawn_blocking` for the live agent-test probe (a blocking subprocess wait).
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# The 3-workflow integration test drives the in-process scheduler (engine
# harness) over the same store and uses tempdir git repos.
tempfile = "3"
