[package]
name = "lazybones-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "lazybonesd"
path = "src/main.rs"

[dependencies]
lazybones-store = { workspace = true }
lazybones-auth = { workspace = true }
lazybones-api = { workspace = true }
lazybones-engine = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
