[package]
name = "lazybones-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
surrealdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Bundled default agent catalog ships as authored YAML, parsed on seed.
serde_yaml = { workspace = true }
thiserror = { workspace = true }
# Secret store: authenticated encryption at rest (AES-256-GCM) keyed by a master
# key derived from a passphrase/env, plus base64 for the stored ciphertext blob.
aes-gcm = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
# Content-addressed assets: an async `BlobStore` trait usable behind `dyn`, and
# plain-text extraction from uploaded PDF sources.
async-trait = { workspace = true }
pdf-extract = { workspace = true }
# In-process event bus: broadcast each transition to live SSE subscribers.
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
