# Backend WASM gate-check guest for the `gate-verdict-tab` example extension.
#
# This is the `crates/lazybones-ext/fixtures/examples/gate-check-example` guest,
# repackaged as an **installable extension**: same `lazybones:ext/gate-check`
# logic, but built and then stamped with the embedded `lazybones.ext.toml`
# manifest custom section (see `build.sh` / `embed-manifest.py`).
#
# Standalone crate — NOT a member of the lazybones workspace (it targets
# `wasm32-wasip2` and has its own dep set). The empty `[workspace]` table makes
# Cargo treat it as its own workspace root so the parent workspace does not
# absorb it.
[package]
name = "gate-verdict-tab"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[lib]
# A WASI Preview 2 component is produced directly by the `wasm32-wasip2` target
# from a cdylib (no separate `cargo component` / `wasm-tools` step needed).
crate-type = ["cdylib"]

[dependencies]
# Guest-side bindings generator for the Component Model. Pinned to the same
# version the host workspace tracks so the generated ABI matches.
wit-bindgen = "0.58"

[profile.release]
# Small, deterministic guest: strip and optimise for size.
opt-level = "s"
strip = true
lto = true
