# Backend WASM guest for the `weather` example extension.
#
# This guest does 100% of the weather work: it EXPORTS the `lazybones:ext/weather`
# interface and, holding the `http-fetch` grant, IMPORTS `wasi:http` to dial the
# keyless Open-Meteo API itself — geocoding the place name then fetching current
# conditions. The frontend only renders what this returns.
#
# Standalone crate — NOT a member of the lazybones workspace (it targets
# `wasm32-wasip2` with its own dep set). The empty `[workspace]` table makes Cargo
# treat it as its own workspace root.
[package]
name = "weather"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[lib]
# A WASI Preview 2 component is produced directly by the `wasm32-wasip2` target.
crate-type = ["cdylib"]

[dependencies]
# Guest-side bindings generator for our `weather-provider` world (the `weather`
# export). Pinned to the version the host workspace tracks.
wit-bindgen = "0.58"
# A high-level `wasi:http` client for the guest: `Client::new().get(url).send()`.
# It brings the outbound `wasi:http` import the `weather-provider` world declares;
# the host only links it (and bounds it to an allowlist) when `http-fetch` is
# granted.
waki = "0.5"
# Parse the Open-Meteo JSON responses.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
strip = true
lto = true
